--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,8 @@
             display:flex;
             align-items:center;
             flex-direction: column;
-            margin:0;
+            padding:15px;
+            box-sizing: border-box;
         }
         .main-container{
             width:400px;
