--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
             display:flex;
             align-items:center;
             flex-direction: column;
-            padding:15px;
+            margin:15px;
             box-sizing: border-box;
         }
         .main-container{
