--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
             box-sizing: border-box;
         }
         .main-container{
-            width:400px;
+            width:auto;
             height:auto;
             border:2px solid red;
             padding:7px 15px 30px 15px;
